# cap-weighted-index-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
data/input/: market_capitalisation.csv
docs/: issues.md  plan.md
src/cap_weighted_index_cli/: cli.py
src/cap_weighted_index_cli/analysis/: calculate_cumulative_weights.py  calculate_weights.py  filter_by_cumulative_weight.py
src/cap_weighted_index_cli/data/: get_dates.py  parse_csv.py
src/cap_weighted_index_cli/execution/: buy.py  sell.py  trade.py
src/cap_weighted_index_cli/logging/: log_bought.py  log_portfolio.py  log_profit.py  log_sold.py  logger.py
src/cap_weighted_index_cli/market/: calculate_cumulative_weights.py  calculate_total_market_cap.py  calculate_weights.py  filter_by_cumulative_weight.py  filter_by_date.py  get_dates.py  prepare_market_snapshot.py  sort_by_market_cap.py
src/cap_weighted_index_cli/models/: market_model.py
tests/: test_cli.py
tests/analysis/: test_calculate_cumulative_weights.py  test_calculate_weights.py  test_filter_by_cumulative_weight.py
tests/data/: test_get_dates.py  test_parse_csv.py
tests/execution/: test_buy.py  test_sell.py  test_trade.py
tests/market/: test_calculate_cumulative_weights.py  test_calculate_total_market_cap.py  test_calculate_weights.py  test_filter_by_cumulative_weight.py  test_filter_by_date.py  test_get_dates.py  test_sort_by_market_cap.py
tests/portfolio/: test_buy_shares.py  test_calculate_shares_to_buy.py  test_calculate_value.py  test_identify_portfolio_changes.py  test_remove_companies.py  test_sell_shares.py
(+6 files in other folders)
